# airflow_dbt_project

.github/workflows/: dbt-ci.yml
airflow/: Dockerfile
airflow/dags/: dag.py
data_warehouse/: .sqlfluff  sqlfluff
data_warehouse/jornada_dw/: packages.yml
data_warehouse/jornada_dw/models/mart/: mart_metricas_clientes.sql  mart_vendas_por_periodo.sql
data_warehouse/jornada_dw/models/staging/: _stg__models.yml  stg_cadastros.sql  stg_pedidos.sql  stg_pedidos_teste_ci.sql
data_warehouse/jornada_dw/seeds/: cadastros.csv
local_setup/: pyproject.toml
