[project]
name = "local-setup"
version = "0.1.0"
description = ""
authors = [
    {name = "gabriel-garciae",email = "eng.gabrielgevangelista@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core (>=1.10.9,<2.0.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "faker (>=37.5.3,<38.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
